<!-- It uses ScrollView tag because without it
the keyboard pad will not prompt automatically -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/autent_password_form"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green_8bc34a"
    tools:context="a.apkt.SimSerMobNumPasswordActivity">

    <LinearLayout
        style="@style/LoginFormContainer"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/autent_sms_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password_sms"
            android:imeActionId="@+id/autent_password_button"
            android:imeActionLabel="@string/action_confirmar"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_1"
            android:textSize="19sp" />

        <Button
            android:id="@+id/autent_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/action_confirmar"
            android:textColor="@color/black"
             />
        <!--android:background="@drawable/button"-->

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password_user_cad"
            android:imeActionId="@+id/user_password_confirm"
            android:imeActionLabel="@string/action_next"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_1"
            android:textSize="19sp"
            android:enabled="false" />

        <EditText
            android:id="@+id/user_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password_user_confirm_cad"
            android:imeActionId="@+id/autent_user_password_button"
            android:imeActionLabel="@string/action_continue"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="15"
            android:singleLine="true"
            android:enabled="false" />

        <Button
            android:id="@+id/autent_user_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/action_continue"
            android:textColor="@color/black"
            android:enabled="false" />
        <!--android:background="@drawable/button"-->
    </LinearLayout>
</ScrollView>

