<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="a.apkt.AutentUserPasswordActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    style="@style/LoginFormContainer"
    android:background="@color/green_8bc34a" >

    <FrameLayout
        android:id="@+id/activity_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" android:paddingTop="5dp"
            android:layout_gravity="center"/>
    </FrameLayout>

    <!-- It uses ScrollView tag because without it
    the number pad will not prompt automatically -->
    <ScrollView android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cadastrar_senha_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/alertdialog_register_password_msg"
                android:textSize="19sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_user_cad"
                android:imeActionId="@+id/user_password_confirm"
                android:imeActionLabel="@string/action_next"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_1"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/user_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_user_confirm_cad"
                android:imeActionId="@+id/autent_user_password_button"
                android:imeActionLabel="@string/action_send"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_1"
                android:textSize="19sp" />

            <Button
                android:id="@+id/autent_user_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_send"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

