<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    style="@style/LoginFormContainer"
    android:background="@color/green_8bc34a"
    android:id="@+id/linear_layout">
    <!--android:visibility="gone">-->
    <!--To activate Login search keyword ACTIVATELOGIN: delete android:visibility="gone" from LinearLayout tag-->
    <FrameLayout
        android:id="@+id/activity_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar style="?android:attr/progressBarStyleLarge"
                     android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp" android:paddingTop="5dp"
                     android:layout_gravity="center"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- Login progress -->
            <LinearLayout
                android:id="@+id/login_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/login_progress_signing_in"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/front_logo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="9dp"
                    android:clickable="true"
                    android:drawableTop="@mipmap/ic_launcher_bitcoin_symbol_whitebg"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:typeface="sans"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="9dp"
                    android:paddingLeft="19dp"
                    android:paddingRight="19dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:typeface="sans"
                    android:text="@string/app_login_title" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/login_fields"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:imeActionId="@+id/password"
                    android:imeActionLabel="@string/action_continue"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_1"
                    android:textSize="19sp"
                    tools:ignore="InvalidImeActionId" />

                <Spinner
                    android:id="@+id/email_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/sign_in_button"
                    android:imeActionLabel="@string/action_login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_1"
                    android:textSize="19sp"
                    android:layout_marginTop="10dp"
                    tools:ignore="InvalidImeActionId" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_register"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_login"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="right" >
                <TextView
                    android:id="@+id/password_forgot_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="32dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/gray_4"
                    android:text="@string/button_title_reset_password" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

